Fix styles and whitespace in bill view

--- a/frontend/src/styles/common.scss
+++ b/frontend/src/styles/common.scss
@@ -18,6 +18,11 @@ b {
     display: inline-block;
     margin-right: 20px;
     margin-bottom: 20px;
+
+    h2 {
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
 }
 
 .sidebar {
@@ -45,10 +50,6 @@ b {
 .bill-content {
     max-height: calc(100vh - var(--bill-content-y-position));
     overflow-y: scroll;
-
-    b {
-        color: inherit;
-    }
 }
 
 .home-page-unauthed {
@@ -233,10 +234,6 @@ b {
 }
 
 .about-us {
-    .bp5-callout {
-        margin-top: 20px;
-    }
-
     .faq {
         li {
             margin-bottom: 10px;
